# orchestrator-ai

./: .env.example  .gitignore  .pdm-python  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  set_paths.sh  setup.py  setup_api_env.sh  turbo.json
apps/api/: .gitignore  .pdm-python  __init__.py  main.py  pyproject.toml  requirements.txt  start.py
apps/api/a2a_protocol/: base_agent.py  supabase_chat_history.py  types.py
apps/api/agents/base/: mcp_context_agent_base.py
apps/api/agents/blog_post_agent/.well-known/: agent.json
apps/api/agents/business/internal_rag/: main.py
apps/api/agents/business/invoice/: main.py
apps/api/agents/business/metrics/: __init__.py  main.py
apps/api/agents/business/sop/: main.py
apps/api/agents/customer/chat_support/: main.py
apps/api/agents/customer/email_triage/: __init__.py  main.py
apps/api/agents/customer/voice_receptionist/: main.py
apps/api/agents/customer/voice_summary/: main.py
apps/api/agents/customer_support_agent/: README.md  routes.py
apps/api/agents/customer_support_agent/.well-known/: agent.json
apps/api/agents/development/requirements_writer/: main.py
apps/api/agents/hr/hr_assistant/: __init__.py  main.py
apps/api/agents/hr/onboarding/: main.py
apps/api/agents/marketing/blog_post/: main.py
apps/api/agents/marketing/calendar/: main.py
apps/api/agents/marketing/content/: main.py
apps/api/agents/marketing/leads/: main.py
apps/api/agents/marketing/marketing_swarm/: main.py
apps/api/agents/orchestrator/: main.py
apps/api/agents/productivity/launcher/: main.py
apps/api/agents/productivity/meetings/: main.py
apps/api/agents/productivity/tasks/: __init__.py  main.py
apps/api/auth/: __init__.py
apps/api/core/: config.py
apps/api/llm/: openai_service.py
apps/api/sessions/: routes.py  schemas.py
apps/api/shared/mcp/: llm_mcp.py  mcp_routes.py
apps/api/tests/: conftest.py  test_main.py
apps/api/tests/agents/: __init__.py  test_orchestrator.py
apps/api/tests/integration/: conftest.py
apps/api/tests/integration/agents/business/: test_invoice_service.py  test_metrics_service.py  test_sop_service.py
apps/api/tests/integration/agents/hr/: test_hr_assistant_service.py
apps/api/tests/integration/agents/orchestrator/: test_orchestrator_service.py
apps/api/v1/: __init__.py  main.py  pyproject.toml  setup_api_env.sh  start.py
apps/api/v1/a2a_protocol/: task_store.py
apps/api/v1/agents/base/: mcp_context_agent_base.py
apps/api/v1/agents/business/: __init__.py
apps/api/v1/agents/business/internal_rag/: __init__.py  main.py
apps/api/v1/agents/business/invoice/: __init__.py  main.py
apps/api/v1/agents/business/metrics/: main.py
apps/api/v1/agents/business/sop/: __init__.py  main.py
apps/api/v1/agents/customer/: __init__.py
apps/api/v1/agents/customer/chat_support/: __init__.py  main.py
apps/api/v1/agents/customer/email_triage/: main.py
apps/api/v1/agents/customer/voice_receptionist/: __init__.py  main.py
apps/api/v1/agents/customer/voice_summary/: __init__.py  main.py
apps/api/v1/agents/development/requirements_writer/: __init__.py  main.py
apps/api/v1/agents/hr/hr_assistant/: main.py
apps/api/v1/agents/hr/onboarding/: __init__.py  main.py
apps/api/v1/agents/hr/policy_rag/: __init__.py  main.py
apps/api/v1/agents/marketing/: __init__.py
apps/api/v1/agents/marketing/blog_post/: __init__.py  main.py
apps/api/v1/agents/marketing/calendar/: main.py
apps/api/v1/agents/marketing/content/: main.py
apps/api/v1/agents/marketing/leads/: main.py
apps/api/v1/agents/marketing/marketing_swarm/: __init__.py  main.py
apps/api/v1/agents/orchestrator/: main.py
apps/api/v1/agents/productivity/: __init__.py
apps/api/v1/agents/productivity/internal_rag_agent/: main.py
apps/api/v1/agents/productivity/launcher/: main.py
apps/api/v1/agents/productivity/meetings/: main.py
apps/api/v1/auth/: dependencies.py  routes.py  schemas.py
apps/api/v1/core/: config.py
apps/api/v1/llm/: openai_service.py
apps/api/v1/markdown_context/: blog_post_agent.md  calendar_agent.md  chat_support_agent.md  competitors_agent.md  content_agent.md  email_triage_agent.md  launcher_agent.md  market_research_agent.md  meetings_agent.md  metrics_agent.md  onboarding_agent.md  orchestrator_agent.md  tasks_agent.md  test_mcp_agent.md  voice_summary_agent.md
apps/api/v1/sessions/: __init__.py  routes.py
apps/api/v1/shared/mcp/: llm_mcp.py  mcp_client.py
apps/api/v1/tests/: conftest.py
apps/api/v1/tests/e2e/: conftest.py  test_full_workflow.py  test_utils.py
apps/api/v1/tests/integration/: conftest.py
apps/api/v2/: pyproject.toml  setup_api_env.sh
apps/api/v2/a2a_protocol/: supabase_chat_history.py  unified_agent_service.py
apps/api/v2/agents/business/metrics/: service.py
apps/api/v2/agents/customer/voice_summary/: main.py
apps/api/v2/agents/development/requirements_writer/: main.py
apps/api/v2/auth/: schemas.py
apps/api/v2/shared/mcp/: mcp_client.py
apps/api/v2/tests/: conftest.py
apps/api/v2/v1/a2a_protocol/: base_agent.py
apps/api/v2/v2/auth/: routes.py
apps/api/v2/v2/llm/: openai_service.py
(+237 files in other folders)
