[project]
name = "orchestrator-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "golfergeek", email = "golfergeet@gmail.com"},
]
dependencies = [
    # "api_service @ file:///${PROJECT_ROOT}/apps/api" # More explicit way to add local path dependency
    "api_service @ file:./apps/api"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.group.dev.dependencies] # Correct way to specify dev dependencies for the root project
pytest = ">=8.2.0"
pytest-asyncio = ">=0.26.0"
pytest-mock = ">=3.14.0"
httpx = ">=0.28.1"
fastapi = ">=0.115.12"
python-dotenv = ">=1.1.0"
openai = ">=1.78.1"
pydantic-settings = ">=2.9.1"
pydantic = {version = ">=2.11.4", extras = ["email"]}
httpx-sse = ">=0.4.0"
supabase = ">=2.15.1"


[project.optional-dependencies]
# dev group moved to [project.group.dev.dependencies]
# If this section becomes empty, it can be removed.
# For now, let's assume there might be other optional dependency groups.
# If not, this whole [project.optional-dependencies] section can be deleted.
# Based on the current file, 'dev' was the only one, so I'll comment it out or prepare for removal.
# dev = [] # Marking as empty or to be removed if no other groups exist.
dev = [
    "supabase>=2.15.1",
    "pydantic[email]>=2.11.4",
]

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
# Add pytest-mock to ensure mocker fixture is available
# Also add asyncio to ensure async tests are handled
addopts = "--asyncio-mode=auto"
# Set the default fixture loop scope to function to avoid deprecation warning
asyncio_default_fixture_loop_scope = "function"
