[project]
name = "api_service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "golfergeek", email = "golfergeet@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "PyYAML>=6.0.1", "uvicorn[standard]>=0.20.0", "python-dotenv>=1.1.0", "pydantic<3.0.0,>=2.4.2", "pydantic-settings>=2.2.1", "httpx>=0.27.0", "openai>=1.25.2", "setuptools>=70.0.0", "httpx-sse>=0.4.0", "tiktoken>=0.7.0", "aiofiles>=23.2.1", "python-multipart>=0.0.20", "langchain>=0.3.25", "langchain-community>=0.3.24"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.setuptools.packages.find]
where = [""]
include = ["main*", "core*", "agents*", "a2a_protocol*", "llm*", "shared*"]
exclude = ["tests*", ".venv*", "__pycache__*"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.12.0"
]
